compiler/lume_parse/src/snapshots/lume_parse__tests__final_expr_snapshots@varref.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = { a };\")"
---
SOURCE_FILE@0..9
  LET_STMT@0..9
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    LEFT_BRACE@5..6 "{"
    STMT_LIST@6..7
      FINAL_STMT@6..7
        VARIABLE_EXPR@6..7
          IDENT@6..7 "a"
    RIGHT_BRACE@7..8 "}"
    SEMICOLON@8..9 ";"
