compiler/lume_parse/src/snapshots/lume_parse__tests__final_expr_snapshots@void.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = { a; };\")"
---
SOURCE_FILE@0..10
  LET_STMT@0..10
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    LEFT_BRACE@5..6 "{"
    STMT_LIST@6..8
      EXPR_STMT@6..8
        VARIABLE_EXPR@6..7
          IDENT@6..7 "a"
        SEMICOLON@7..8 ";"
    RIGHT_BRACE@8..9 "}"
    SEMICOLON@9..10 ";"
