compiler/lume_parse/src/snapshots/lume_parse__tests__function_definition_snapshots@parameters.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(\"fn main(argc: UInt8, arcv: [String]) -> void { }\")"
---
SOURCE_FILE@0..40
  FN@0..40
    FN_KW@0..2 "fn"
    NAME@2..6
      IDENT@2..6 "main"
    PARAM_LIST@6..32
      LEFT_PAREN@6..7 "("
      PARAM@7..17
        NAME@7..11
          IDENT@7..11 "argc"
        COLON@11..12 ":"
        PARAM_TYPE@12..17
          PATH@12..17
            PATH_TYPE@12..17
              IDENT@12..17 "UInt8"
      COMMA@17..18 ","
      PARAM@18..31
        NAME@18..22
          IDENT@18..22 "arcv"
        COLON@22..23 ":"
        PARAM_TYPE@23..31
          ARRAY_TYPE@23..31
            LEFT_BRACKET@23..24 "["
            PATH@24..30
              PATH_TYPE@24..30
                IDENT@24..30 "String"
            RIGHT_BRACKET@30..31 "]"
      RIGHT_PAREN@31..32 ")"
    RETURN_TYPE@32..38
      ARROW@32..34 "->"
      PATH@34..38
        PATH_TYPE@34..38
          IDENT@34..38 "void"
    BLOCK@38..40
      LEFT_BRACE@38..39 "{"
      STMT_LIST@39..39
      RIGHT_BRACE@39..40 "}"
