compiler/lume_parse/src/snapshots/lume_parse__tests__function_definition_snapshots@priv_modifier.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"priv fn main() -> Void {}\")"
---
SOURCE_FILE@0..25
  FN@0..25
    VISIBILITY@0..4
      PRIV_KW@0..4 "priv"
    WHITESPACE@4..5 " "
    SIG@5..23
      FN_KW@5..7 "fn"
      WHITESPACE@7..8 " "
      NAME@8..12
        IDENT@8..12 "main"
      PARAM_LIST@12..14
        LEFT_PAREN@12..13 "("
        RIGHT_PAREN@13..14 ")"
      WHITESPACE@14..15 " "
      RETURN_TYPE@15..23
        ARROW@15..17 "->"
        WHITESPACE@17..18 " "
        NAMED_TYPE@18..23
          PATH@18..23
            PATH_SEGMENT@18..23
              PATH_TYPE@18..23
                IDENT@18..22 "Void"
                WHITESPACE@22..23 " "
    BLOCK@23..25
      LEFT_BRACE@23..24 "{"
      RIGHT_BRACE@24..25 "}"
