compiler/lume_parse/src/snapshots/lume_parse__tests__function_definition_snapshots@pub_modifier.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"pub fn main() -> Void {}\")"
---
SOURCE_FILE@0..24
  FN@0..24
    VISIBILITY@0..4
      PUB_KW@0..3 "pub"
      WHITESPACE@3..4 " "
    SIG@4..22
      FN_KW@4..6 "fn"
      WHITESPACE@6..7 " "
      NAME@7..11
        IDENT@7..11 "main"
      PARAM_LIST@11..13
        LEFT_PAREN@11..12 "("
        RIGHT_PAREN@12..13 ")"
      WHITESPACE@13..14 " "
      RETURN_TYPE@14..22
        ARROW@14..16 "->"
        WHITESPACE@16..17 " "
        NAMED_TYPE@17..22
          PATH@17..22
            PATH_SEGMENT@17..22
              PATH_TYPE@17..22
                NAME@17..21
                  IDENT@17..21 "Void"
                WHITESPACE@21..22 " "
    BLOCK@22..24
      LEFT_BRACE@22..23 "{"
      RIGHT_BRACE@23..24 "}"
